2010-06-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29913: 246 Byte Bug - AVRdude crashes
	doc/avrdude.texi (Troubleshooting): Mention the libusb 0.1 API
	wrapper issue that is present in some Linux versions.

2010-03-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29263: Can't build avrdude on windows using latest cygwin 1.7.1
	* doc/avrdude.texi: Remove the recommendation for building
	Win32 binaries under Cygwin; mention MinGW as an alternative
	environment.

2010-03-08  Michal Ludvig <mludvig@logix.net.nz>

	* ser_posix.c(ser_set_dtr_rts): Fixed DTR on/off to make
	  Arduino auto-reset work. (bug #29108, patch #7100)

2010-03-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Replace printf() by fprintf(stderr)
	* safemode.c: (Dito.)
	* usbtiny.c: (Dito.)

2010-01-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Cleanup Cygwin builds.
	* windows/Makefile.am (loaddrv_LDFLAGS): remove, the -mno-cygwin
	flag is supposed to be set in CFLAGS by ./configure
	* configure.ac: add a check for the presence of usleep(), add a
	check whether the linker accepts -static
	* avrdude.h: protect prototype for usleep by !defined(HAVE_USLEEP)
	* ppwin.c (usleep): protect by !defined(HAVE_USLEEP)
	* main.c: silence "array subscript of type char" compiler warnings
	by casting all arguments to tolower()/toupper() and isspace()/
	isdigit()/ispunct() to "int"
	* butterfly.c: (Dito.)
	* avr910.c: (Dito.)

2010-01-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump for post-5.10.

2010-01-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Released version 5.10.

2010-01-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28677: Cygwin's GCC no longer supports -mno-cygwin option
	* configure.ac: For Win32 environments, add a check whether the
	compiler understands the -mno-cygwin option.  If not, don't use
	it but suggest using a different compiler.

2010-01-18  David Hoerl <dhoerl@mac.com>
